syntax = "proto3";

package continuum;
option go_package="jormungandr/v2/proto/continuum";

import "base.proto";

message Request{
  uint32 nest_tick = 1;  // 一次调用多个tick
  base.Field field = 2;  // 场，包含所有实体
}

message Result{
  repeated base.Field history = 1;  // 一次返回多个tick
} 

service Continuum{
  rpc TimePass(Request) returns (Result);
  rpc VelocityMove(Request) returns (Result);
  // TODO: 使用stream计数，减少返回延迟
}
